syntax = "proto3";

package auth;


service AuthService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse) {}
  rpc Login(LoginReqeust) returns (LoginResponse) {}
  rpc RessetPassword(RessetPasswordRequest) returns (RessetPasswordResponse){}
}

message SignUpRequest {
  string username = 1;
  string password = 2;
}

message SignUpResponse {
  string username = 1;
  string token = 2;
}


message LoginReqeust {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string username = 1;
  string token = 2;
}


message RessetPasswordRequest {
  string username = 1;
  string password = 2;
  string newPassword = 3;
  string newPasswordRepeat = 4; 
}

message RessetPasswordResponse {
  string username = 1;
  string token = 2;
}





